changes for jar